Changelog
=========

1.1.3 (unreleased)
------------------


1.1.2 (2012-06-15)
------------------

* Fix day names. Also respect the first day of the week from the current
  locale. This fixes http://code.google.com/p/dexterity/issues/detail?id=272
  [davisagli]

1.1.1 (2011-09-24)
------------------

 * Fix conditional for the GS profile.
   [davisagli]

1.1 (2011-09-12)
----------------

 * Fix validation errors so they are caught and correctly reported by z3c.form.
   [davisagli]

 * Added a GS profile (conditionally loaded in configure.zcml if generic
   setup is installed) to enable the plone.app.jquerytools css & js support
   for dateinput popup.
   [smcmahon]

 * Made js for dateinput popup check for jQuery().dateinput before invoking
   it. Changed from $ to jQuery.
   [smcmahon]

 * IE was baulking on a missing closing parenthesis.
   [danjacka]


1.0.5 (2011-06-28)
------------------

 * Change more $ to jQuery.
   [danjacka]

 * Fix month selection issue with the date input widget.  Previously, due
   to the leading zero, months < 10 weren't being selected when picking a
   date on the calendar widget.
   [davidjb]
 
 * Fix date offset issue for default dates on the jQuery date input widget.
   Providing the default value as a JavaScript Date(yyyy, mm, dd) required
   months to be in the range of 0 to 11 but outputting as Date("yyyy/mm/dd")
   works as expected.
   [davidjb]

 * Fix issue with jQuery date input widget not being displayed when
   an incomplete date was entered.
   [davidjb]

 * Avoid error fetching widget values when no year or day was entered.
   [davisagli]

 * Made js for dateinput popup check for jQuery().dateinput before invoking
   it. Changed from $ to jQuery.
   [smcmahon]

 * removed trailing comma in JavaScript dict (which broke Internet Explorer)
   [Brainix]

1.0.4 (2011-01-19)
------------------
    
 * fixed show_jquerytools_dateinput_js for DatetimeWidget [awello]
 * fix time-dependent test [davisagli]
    