@@ -4,6 +4,10 @@ Changelog
 1.1.3 (unreleased)
 ------------------
 
+* Make sure DOM is ready before activating the dateinput jQuery plugin.
+  This was causing Internet Explorer 7 to fail. 
+  (This fix was backported from master)
+  [rafaelbco]
 
 1.1.2 (2012-06-15)
 ------------------
